# sme-contrib

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  README.md  codecov.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: pypi.yml  test.yml
docs/: conf.py  documentation.rst  index.rst  requirements.txt
docs/notebooks/: model.xml  optimize.ipynb  plot.ipynb
sme_contrib/: optimize.py  plot.py
sme_contrib/optimize/: __init__.py  hessian.py  minimize.py  utils.py
sme_contrib/optimize/tests/: test_hessian.py  test_minimize.py  test_utils.py
sme_contrib/tests/: model.xml  test_optimize.py  test_plot.py
src/sme_contrib/: optimize.py  plot.py  pyvista_utils.py
tests/: conftest.py  test_optimize.py  test_plot.py  test_pyvista_utils.py
